fix: fix product image not showing in thank you summary

--- a/themes/origins/assets/thank-you.css
+++ b/themes/origins/assets/thank-you.css
@@ -71,6 +71,9 @@ yc-section .order .items .item .image{
   width:var(--size);
   height:70px;
   height:var(--size);
+  border-radius:var(--radius-sm);
+  overflow:hidden;
+  border:1px solid rgba(var(--section-text-color), 0.05);
 }
 yc-section .order .items .item .image .card-placeholder{
   width:100%;
